# groundingAPI

./: README.md  pyproject.toml
src/: benchmark.py  dataset.py  dino.py  interface.py
src/dinoapi/: main.py
